* Start the inbound marketing development process. * Added a hook to extend form output templates from 3rd party addons. * Fixed bug related to the shortcode and the way to override the output template. * Added the ellipsis to the title and content form elements output in the submissions and frontend table, to avoid break the views when the content is too big. * Fixed the issue of the form element loading the values when the form was in create mode.

--- a/assets/admin/css/admin.css
+++ b/assets/admin/css/admin.css
@@ -2041,3 +2041,16 @@ div#formbuilder-action-templates {
     width: 30%;
     float: left;
 }
+
+/*
+ * Marketing styles
+ */
+
+.bf-marketing-action-container{
+    display: flex;
+    padding: 5px;
+}
+
+.bf-marketing-btn{
+    margin: 3px;
+}
